--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,12 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="crear_libros">CREAR LIBROS</string>
+    <string name="isbn">ISBN</string>
+    <string name="titulo">Titulo</string>
+    <string name="autor">Autor</string>
+    <string name="no_paginas">No. Paginas</string>
+    <string name="editorial">Editorial</string>
+    <string name="guardar">Guardar</string>
+    <string name="limpiar">Limpiar</string>
 </resources>
